# playground

./: .env.example  .gitignore  APPLE_SILICON.md  BUILD_README.md  Cargo.toml  DATA_MIGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  PROJECT_PROGRESS.md  QUICKSTART.md  README.md  TESTING_PLAN.md  build.bat  build.sh  data-migrate.sh  deploy.sh  docker-compose.yml  fix_api.py  fix_imports.py  fix_state.py  fix_test.py  fix_test_assert.py  manage.sh  run-tests.sh  update_dashboard.py  update_main.py  web_fix.py  web_fix2.py
.claude/: settings.local.json
crates/api/: Cargo.toml
crates/api/src/: main.rs  models.rs
crates/api/static/: icon-replacement.js  index.html
crates/api/static/assets/: index-BbL_-m3y.css  index-CUUw6XSA.css  index-Cvbt6igy.js  index-Cvbt6igy.js.map  index-DWh1YaUJ.js  index-DWh1YaUJ.js.map  index-DycbDQ5c.js  index-DycbDQ5c.js.map  index-WHcU0Wls.css  vendor-DKZzD4U1.js  vendor-DKZzD4U1.js.map
crates/api/tests/: brain_api_test.rs  engine_api_test.rs  health_test.rs  integration_test.rs  synergy_api_test.rs
crates/brain/: Cargo.toml
crates/brain/src/: lib.rs
crates/brain/src/api/: mod.rs
crates/brain/src/collectors/: api_collector.rs  file_handler.rs  mod.rs  rss_collector.rs
crates/brain/src/mount/: mod.rs
crates/brain/src/processors/: cleaner.rs  extractor.rs  mod.rs  pipeline.rs  summarizer.rs  tagger.rs
crates/brain/src/storage/: graph_memory.rs  hot_memory.rs  memory.rs  mod.rs  raw_archive.rs  unified_memory.rs  vector_memory.rs
crates/brain/test_data/archive_search/2026/02/01/: 12488289-60f1-4153-aa7e-f12784445e7d.json  2181aed5-7685-4e00-9ce1-e846d63c29e8.json  318231d2-f284-4b87-9986-db6f6bb8c0ab.json  3c6caf72-9ba4-443e-8aab-2c26be4d17b3.json  4eddab36-a1b6-408a-860e-1472b9efb403.json  536e41ad-4613-4c75-88b6-ef7a96fa9280.json  5b2091a3-7d2b-4b32-8606-63f57bed670c.json  78a81a26-ff1e-473b-9692-3badfa1f3595.json  7ecf71ba-3239-4aea-8838-8d13935883ca.json  8927ac5a-5188-470e-9eb8-7277fd8e8474.json  d0bbf857-5509-4a9e-8561-5fd86b4acde2.json  d4e94330-6e54-49ae-ba52-f668d9e8e90e.json  d9db5143-ed4d-448d-bfc2-ddac46865dbe.json  f04ebb9e-32df-4974-bc0e-128d6e255a07.json
crates/brain/test_data/archive_search/2026/02/03/: 087dbaca-5ffa-403e-9dcd-bd5f81e54311.json  1b29196c-75b1-4ee5-8200-e635ad5e7cd8.json  245cc070-d569-4cf5-b19d-4bb51df76d78.json  7113c33b-1d36-4d72-ada6-3668ea09f8fc.json  74d5d7f3-af94-4661-9e32-43d4d1e15327.json  b3e8750d-ae59-4e62-a52c-983e5faa2c67.json
crates/brain/test_data/archive_search/2026/02/04/: 0ba90f5a-83fa-493a-bc68-5f45e3313b27.json  3e48291b-9875-4bfd-ba8f-3bfc59f32b31.json  43dd4267-2a7b-4374-953b-1b02e0bfb9c4.json  7469b87d-046b-43d8-96b5-862123ca99b7.json  772f97a7-5235-4667-86c1-a309d11fc947.json  8412439c-cd72-47bb-8eb0-ac4d1a5003db.json  aad8e3aa-f0c2-41d7-86d6-59c62917bb4b.json  b870ee0e-2293-4c4b-a9b2-300f568da7d4.json  bf227a07-897e-4f01-a452-407fe08ece92.json  d1c921ae-76fa-41bb-81d0-2682d49c0f79.json  de36ed6e-b2d3-4efa-aa2b-e0cd775161bd.json  def6f146-db38-4f98-81c2-cbc0bd6ff15b.json  e03c284d-d923-4d8e-9208-e90abfeeb17e.json  e7cdcdd8-aad8-4617-a9b8-b1467b6b8f28.json  f1495f38-7fa5-4179-8465-90eacfce5c17.json  f9fedfb4-3c76-4c71-9643-ecae3f2e4ae6.json
crates/brain/test_data/archive_search/2026/02/07/: 2aa1d729-efd7-41a9-960b-d8bba682ec16.json  4d7c6c89-b852-4dc5-8b1e-981ac08f827d.json  53d4cb68-1aed-481b-b45a-599732827c3e.json  c91edb4d-3efa-49bd-976b-0ff396c3cc1c.json
crates/brain/test_data/archive_search/2026/02/13/: 2094f765-ff28-40ac-8a5b-dc4226655acb.json  2c61f930-0be5-4c2d-84b0-60734690917b.json  473f0d38-e5f2-428f-aaa9-078e15249263.json  58b27fe7-9b3a-4156-b4ae-a07f9c23d2e1.json  633b2bef-c522-416a-9e77-4e38962f83e3.json  7f7679fc-ff45-44f6-8a99-ff2441c72172.json  9b92c7bb-cd78-4be4-b3cd-ca1d399323cb.json  9e06e789-42e2-40a2-b033-2ea5cbd644c7.json  a4eba9f3-b630-45de-b0f6-42ccc26b8cb9.json  ac439718-f33a-4c4d-888f-231b6c1c45c0.json  aed02103-dc7a-4cda-baf4-22ddb0e3e41c.json  b448e20f-ddb0-4ef3-ace6-9846af41751d.json  d39524d0-f42c-4611-b4ea-774d96b0325e.json  da102546-5208-46e6-9873-d19bcb350b80.json  (+2 more)
crates/brain/tests/: storage_integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/common/src/agent/: mod.rs
crates/common/src/config/: mod.rs
crates/common/src/llm/: mod.rs
crates/common/src/memory/: mod.rs
crates/common/src/testing/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/agent/: local.rs  mod.rs  oracle.rs  universal.rs
crates/engine/src/api/: mod.rs
crates/engine/src/environment/: examples.rs  mod.rs  schema.rs  state.rs
crates/engine/src/session/: mod.rs
crates/engine/src/workflow/: engine.rs  mod.rs
crates/synergy/: Cargo.toml
crates/synergy/src/: lib.rs
crates/synergy/src/api/: mod.rs
crates/synergy/src/events/: mod.rs
crates/synergy/src/registry/: mod.rs
crates/synergy/src/scheduler/: mod.rs  mod.rs.bak
(+127 files in other folders)
