[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "api"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
common = { path = "../common" }
brain = { path = "../brain" }
engine = { path = "../engine" }
synergy = { path = "../synergy" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

# Static file embedding
rust-embed.workspace = true

# Configuration
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# MIME type detection
mime_guess.workspace = true
