[package]
name = "brain"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Storage
petgraph.workspace = true

# Data Collection
reqwest.workspace = true
feed-rs.workspace = true

# Processing
regex.workspace = true
mime_guess.workspace = true

# Utilities
tokio-util = "0.7"
serde_with = "3.0"

# API
axum.workspace = true

# LLM
# async-openai.workspace = true

[dev-dependencies]
tempfile = "3.14"
