[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
toml.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
rand = "0.8"
reqwest.workspace = true
