[package]
name = "synergy"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
brain = { path = "../brain" }
engine = { path = "../engine" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database
sqlx.workspace = true

# Cron scheduling
tokio-cron-scheduler.workspace = true

# Web framework
axum.workspace = true
